Switched to external library for terminal emulation

--- a/jterm.htm
+++ b/jterm.htm
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>JTerm</title>
+    <link rel="stylesheet" type="text/css" href="assets/jquery.terminal-1.5.0.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/terminal.css" />
+    <script type="text/javascript" src="assets/jquery-import.js"></script>
+    <script type="text/javascript" src="assets/jquery.terminal-1.5.0.min.js"></script>
     <script type="text/javascript" src="assets/terminal.js"></script>
   </head>
   <body>
